--- a/web/sites/mobile-entrypage/config/sync/core.entity_form_display.node.page.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_form_display.node.page.default.yml
@@ -9,6 +9,42 @@ dependencies:
     - conditional_fields
     - path
     - text
+third_party_settings:
+  field_group:
+    group_pre:
+      children:
+        - body
+        - field_image
+        - field_banner_content
+        - field_banner_link
+        - field_banner_link_target
+      parent_name: ''
+      weight: 12
+      format_type: fieldset
+      format_settings:
+        label: 'PRE-Login Fields'
+        description: ''
+        id: ''
+        classes: ''
+        required_fields: false
+      label: 'PRE-Login Fields'
+    group_post_login_fields:
+      children:
+        - field_post_body
+        - field_post_banner_image
+        - field_post_banner_content
+        - field_post_banner_link
+        - field_post_banner_link_target
+      parent_name: ''
+      weight: 13
+      format_type: fieldset
+      format_settings:
+        label: 'Post-Login Fields'
+        description: ''
+        id: ''
+        classes: ''
+        required_fields: false
+      label: 'Post-Login Fields'
 _core:
   default_config_hash: sWCotip3wyA0CvZUxyo-StTDU8TyTAhx5fcfOiHS6s4
 id: node.page.default
