--- a/web/sites/mobile-entrypage/config/sync/language.content_settings.paragraph.game_list.yml
+++ b/web/sites/mobile-entrypage/config/sync/language.content_settings.paragraph.game_list.yml
@@ -1,9 +1,9 @@
-uuid: f7655cc2-3274-412a-beb3-b1881913d8e4
+uuid: 38999f07-74b2-4e1d-8373-19bf359b578d
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.promotion
+    - paragraphs.paragraphs_type.game_list
   module:
     - content_translation
 third_party_settings:
@@ -11,8 +11,8 @@ third_party_settings:
     enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: node.promotion
-target_entity_type_id: node
-target_bundle: promotion
+id: paragraph.game_list
+target_entity_type_id: paragraph
+target_bundle: game_list
 default_langcode: site_default
 language_alterable: true
