--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
@@ -11,18 +11,22 @@ dependencies:
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_code
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_code_icore
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_description
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_filter
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_filter_games
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_icon_label
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_provider
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_tag
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_thumbnail
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_title
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_title_icon
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_type
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_provider_product
   module:
     - image
     - lucky_baby_mobile_games
     - options
+    - text
     - user
 id: lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default
 targetEntityType: lucky_baby_mobile_games_entity
@@ -96,6 +100,13 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_game_description:
+    weight: 15
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_game_filter:
     weight: 17
     label: above
@@ -111,6 +122,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_game_icon_label:
+    weight: 20
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_provider:
     weight: 11
@@ -144,6 +163,15 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_title_icon:
+    weight: 19
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_game_type:
     weight: 18
