Added 777Baby Game Page Configuration Fields & Category V2 View

--- a/web/sites/777baby-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -11,12 +11,15 @@ dependencies:
     - field.storage.lucky_baby_mobile_games_entity.field_game_category
     - field.storage.lucky_baby_mobile_games_entity.field_game_code
     - field.storage.lucky_baby_mobile_games_entity.field_game_code_icore
+    - field.storage.lucky_baby_mobile_games_entity.field_game_description
     - field.storage.lucky_baby_mobile_games_entity.field_game_filter
     - field.storage.lucky_baby_mobile_games_entity.field_game_filter_games
+    - field.storage.lucky_baby_mobile_games_entity.field_game_icon_label
     - field.storage.lucky_baby_mobile_games_entity.field_game_provider
     - field.storage.lucky_baby_mobile_games_entity.field_game_tag
     - field.storage.lucky_baby_mobile_games_entity.field_game_thumbnail
     - field.storage.lucky_baby_mobile_games_entity.field_game_title
+    - field.storage.lucky_baby_mobile_games_entity.field_game_title_icon
     - field.storage.lucky_baby_mobile_games_entity.field_game_type
     - field.storage.lucky_baby_mobile_games_entity.field_provider_product
     - taxonomy.vocabulary.game_provider
@@ -29,6 +32,7 @@ dependencies:
     - rest_views
     - serialization
     - taxonomy
+    - text
     - webcomposer_rest_extra
 id: game_list_mobile_v2
 label: 'Game List (Mobile) - V2'
@@ -1288,6 +1292,9 @@ display:
             field_game_category_export:
               alias: game_category
               raw_output: false
+            field_game_description_export:
+              alias: game_description
+              raw_output: false
             field_arcade_game_category_export:
               alias: arcade_game_category
               raw_output: false
@@ -1299,6 +1306,12 @@ display:
               raw_output: false
             field_game_tag_export_1:
               alias: game_tag_object
+              raw_output: false
+            field_game_title_icon_export:
+              alias: game_title_icon
+              raw_output: false
+            field_game_icon_label_export:
+              alias: game_icon_label
               raw_output: false
       pager:
         type: full
@@ -2147,6 +2160,66 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_game_description_export:
+          id: field_game_description_export
+          table: lucky_baby_mobile_games_entity__field_game_description
+          field: field_game_description_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
         field_arcade_game_category_export:
           id: field_arcade_game_category_export
           table: lucky_baby_mobile_games_entity__field_arcade_game_category
@@ -2462,6 +2535,130 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_game_title_icon_export:
+          id: field_game_title_icon_export
+          table: lucky_baby_mobile_games_entity__field_game_title_icon
+          field: field_game_title_icon_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image_export
+          settings:
+            image_style: ''
+            export_alt: 0
+            export_title: false
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_icon_label_export:
+          id: field_game_icon_label_export
+          table: lucky_baby_mobile_games_entity__field_game_icon_label
+          field: field_game_icon_label_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: 0
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       filters:
         langcode:
           id: langcode
@@ -2569,11 +2766,14 @@ display:
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_category'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_code'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_code_icore'
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_description'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_filter'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_filter_games'
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_icon_label'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_provider'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_tag'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_thumbnail'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_title'
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_title_icon'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_type'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_provider_product'
