--- a/web/sites/777baby-casino/config/sync/field.storage.lucky_baby_desktop_games_entity.field_game_description.yml
+++ b/web/sites/777baby-casino/config/sync/field.storage.lucky_baby_desktop_games_entity.field_game_description.yml
@@ -4,10 +4,10 @@ status: true
 dependencies:
   module:
     - text
-    - zipang_desktop_games
-id: zipang_desktop_games_entity.field_game_description
+    - lucky_baby_desktop_games
+id: lucky_baby_desktop_games_entity.field_game_description
 field_name: field_game_description
-entity_type: zipang_desktop_games_entity
+entity_type: lucky_baby_desktop_games_entity
 type: text_with_summary
 settings: {  }
 module: text
