--- a/web/sites/777baby-casino/config/sync/field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_icon_label.yml
+++ b/web/sites/777baby-casino/config/sync/field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_icon_label.yml
@@ -3,13 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.zipang_desktop_games_entity.field_game_icon_label
+    - field.storage.lucky_baby_desktop_games_entity.field_game_icon_label
   module:
-    - zipang_desktop_games
-id: zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_icon_label
+    - lucky_baby_desktop_games
+id: lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_icon_label
 field_name: field_game_icon_label
-entity_type: zipang_desktop_games_entity
-bundle: zipang_desktop_games_entity
+entity_type: lucky_baby_desktop_games_entity
+bundle: lucky_baby_desktop_games_entity
 label: 'Game Icon Label'
 description: ''
 required: false
