--- a/web/sites/live-dealer/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/live-dealer/config/sync/core.entity_view_display.node.games.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.games.field_game_title
     - field.field.node.games.field_hide
     - field.field.node.games.field_image_size
+    - field.field.node.games.field_launch_direct_table
     - field.field.node.games.field_maintenance_blurb
     - field.field.node.games.field_popup_window_name
     - field.field.node.games.field_popup_window_size
@@ -142,6 +143,16 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_launch_direct_table:
+    weight: 21
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_maintenance_blurb:
     weight: 9
