--- a/web/sites/777baby-casino/config/sync/field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_icon_label.yml
+++ b/web/sites/777baby-casino/config/sync/field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_icon_label.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.storage.lucky_baby_mobile_games_entity.field_game_icon_label
   module:
-    - zipang_mobile_games
+    - lucky_baby_mobile_games
 id: lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_icon_label
 field_name: field_game_icon_label
 entity_type: lucky_baby_mobile_games_entity
