--- a/web/sites/777baby-casino/config/sync/field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_title_icon.yml
+++ b/web/sites/777baby-casino/config/sync/field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_title_icon.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.storage.lucky_baby_mobile_games_entity.field_game_title_icon
   module:
     - image
-    - zipang_mobile_games
+    - lucky_baby_mobile_games
 id: lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_title_icon
 field_name: field_game_title_icon
 entity_type: lucky_baby_mobile_games_entity
