--- a/web/sites/777baby-casino/config/sync/field.storage.lucky_baby_desktop_games_entity.field_game_icon_label.yml
+++ b/web/sites/777baby-casino/config/sync/field.storage.lucky_baby_desktop_games_entity.field_game_icon_label.yml
@@ -1,12 +1,12 @@
-uuid: 239f9067-f4ed-46ed-b137-200daf64de55
+uuid: 60d8f99d-0a83-44dc-9cc0-b86cad7d4f50
 langcode: en
 status: true
 dependencies:
   module:
-    - lucky_baby_mobile_games
-id: lucky_baby_mobile_games_entity.field_game_icon_label
+    - lucky_baby_desktop_games
+id: lucky_baby_desktop_games_entity.field_game_icon_label
 field_name: field_game_icon_label
-entity_type: lucky_baby_mobile_games_entity
+entity_type: lucky_baby_desktop_games_entity
 type: string
 settings:
   max_length: 255
