--- a/web/sites/mobile-entrypage/config/sync/field.field.node.promotion.body.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.node.promotion.body.yml
@@ -12,7 +12,7 @@ field_name: body
 entity_type: node
 bundle: promotion
 label: Body
-description: ''
+description: 'Please use the following placeholder code [[promotion_game_widget]] to add game list widget on any part of the promotion body.'
 required: false
 translatable: true
 default_value: {  }
