--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.game_list.field_game_provider.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.game_list.field_game_provider.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.paragraph.field_game_provider
     - paragraphs.paragraphs_type.game_list
+    - taxonomy.vocabulary.games_providers
 id: paragraph.game_list.field_game_provider
 field_name: field_game_provider
 entity_type: paragraph
@@ -17,5 +18,12 @@ default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
-  handler_settings: {  }
+  handler_settings:
+    target_bundles:
+      games_providers: games_providers
+    sort:
+      field: name
+      direction: asc
+    auto_create: false
+    auto_create_bundle: ''
 field_type: entity_reference
