--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -100,6 +100,7 @@ module:
   webcomposer_sitemap: 0
   webcomposer_slider_v2: 0
   webcomposer_social_media: 0
+  webcomposer_site_maintenance: 0
   webcomposer_sponsor: 0
   webcomposer_territory_blocking: 0
   webcomposer_audit_export: 0
@@ -112,8 +113,10 @@ module:
   zedbet_forms: 0
   zedbet_front_blocks: 0
   zedbet_header_config: 0
+  zedbet_footer_config: 0
   zedbet_unsupported_currency: 0
   zedbet_urls: 0
+  zedbet_payments: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
