--- a/web/sites/mobile-live-dealer/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-live-dealer/config/sync/core.entity_view_display.node.games.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.games.field_lobby_tab
     - field.field.node.games.field_preview_mode
     - field.field.node.games.field_provider_logo
+    - field.field.node.games.field_table_id
     - field.field.node.games.field_target
     - field.field.node.games.field_thumbnail_image
     - field.field.node.games.field_use_game_loader
@@ -26,7 +27,7 @@ third_party_settings:
     group_under_maintenance_settings:
       children: {  }
       parent_name: ''
-      weight: 10
+      weight: 11
       format_type: details
       format_settings:
         id: ''
@@ -48,7 +49,7 @@ content:
     type: string
     region: content
   field_game_lobby:
-    weight: 14
+    weight: 15
     label: above
     settings:
       format: default
@@ -58,7 +59,7 @@ content:
     type: boolean
     region: content
   field_game_platform:
-    weight: 13
+    weight: 14
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -72,7 +73,7 @@ content:
     type: list_default
     region: content
   field_game_ribbon:
-    weight: 9
+    weight: 10
     label: above
     settings:
       link: true
@@ -80,7 +81,7 @@ content:
     type: entity_reference_label
     region: content
   field_games_subprovider:
-    weight: 7
+    weight: 8
     label: above
     settings:
       link: true
@@ -96,7 +97,7 @@ content:
     type: entity_reference_label
     region: content
   field_preview_mode:
-    weight: 11
+    weight: 12
     label: above
     settings:
       format: default
@@ -114,15 +115,23 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_table_id:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_target:
-    weight: 8
+    weight: 9
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_thumbnail_image:
-    weight: 6
+    weight: 7
     label: above
     settings:
       image_style: ''
@@ -131,7 +140,7 @@ content:
     type: image
     region: content
   field_use_game_loader:
-    weight: 12
+    weight: 13
     label: above
     settings:
       format: default
