--- a/web/sites/mobile-live-dealer/config/sync/views.view.games_list.yml
+++ b/web/sites/mobile-live-dealer/config/sync/views.view.games_list.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.storage.node.field_lobby_tab
     - field.storage.node.field_preview_mode
     - field.storage.node.field_provider_logo
+    - field.storage.node.field_table_id
     - field.storage.node.field_target
     - field.storage.node.field_thumbnail_image
     - field.storage.node.field_use_game_loader
@@ -2134,6 +2135,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_table_id:
+          id: field_table_id
+          table: node__field_table_id
+          field: field_table_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       defaults:
         fields: false
         relationships: false
@@ -2321,6 +2385,7 @@ display:
         - 'config:field.storage.node.field_lobby_tab'
         - 'config:field.storage.node.field_preview_mode'
         - 'config:field.storage.node.field_provider_logo'
+        - 'config:field.storage.node.field_table_id'
         - 'config:field.storage.node.field_target'
         - 'config:field.storage.node.field_thumbnail_image'
         - 'config:field.storage.node.field_use_game_loader'
