--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
@@ -3,6 +3,7 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_all_games_category	
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_arcade_game_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_arcade_game_filter
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_client_type
@@ -33,6 +34,14 @@ targetEntityType: lucky_baby_mobile_games_entity
 bundle: lucky_baby_mobile_games_entity
 mode: default
 content:
+  field_all_games_category:
+    weight: 21
+    label: above
+    settings:
+      link: true
+    third_party_settings: { }
+    type: entity_reference_label
+    region: content	
   field_arcade_game_category:
     weight: 16
     label: above
