fix translation and filter

--- a/web/sites/777baby-casino/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/777baby-casino/config/sync/taxonomy_unique.settings.yml
@@ -30,3 +30,5 @@ arcade_game_category: 0
 arcade_game_category_message: 'Term @term already exists in vocabulary @vocabulary.'
 all_games_category: 0
 all_games_category_message: 'Term @term already exists in vocabulary @vocabulary.'
+arcade_game_filter: 0
+arcade_game_filter_message: 'Term @term already exists in vocabulary @vocabulary.'
