--- a/web/sites/777baby-casino/config/sync/views.view.mobile_game_list.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.mobile_game_list.yml
@@ -908,6 +908,45 @@ display:
           hierarchy: true
           error_message: true
           plugin_id: taxonomy_index_tid
+        field_enable_game_value:
+          id: field_enable_game_value
+          table: lucky_baby_mobile_games_entity__field_enable_game
+          field: field_enable_game_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'Enable Game (field_enable_game)'
+            description: ''
+            use_operator: false
+            operator: field_enable_game_value_op
+            identifier: field_enable_game_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
         field_enable_free_play_value:
           id: field_enable_free_play_value
           table: lucky_baby_mobile_games_entity__field_enable_free_play
